Add markup and styles

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="stylesheet" href="./src/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="./src/main.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="stylesheet" href="./src/style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>JavaScript - Hex Color Generator</title>
+    </head>
+    <body>
+        <div id="app">
+            <div class="container">
+                <h2 class="heading">Get random background color</h2>
+                <p class="code">Hex Code: <span>#333333</span></p>
+                <button class="click-me">Click me</button>
+            </div>
+        </div>
+        <script type="module" src="./src/main.js"></script>
+    </body>
 </html>
