Add transition and copy icon and box-shadow

--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <link rel="stylesheet" href="./src/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+            integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <title>JavaScript - Hex Color Generator</title>
     </head>
     <body>
         <div id="app">
             <div class="container">
                 <h2 class="heading">Get random background color</h2>
-                <p class="code">Hex Code: <span>#333333</span></p>
+                <p class="code">
+                    Hex Code:
+                    <span>#333333 <i class="fa-regular fa-copy"></i> </span>
+                </p>
                 <button class="click-me">Click me</button>
             </div>
         </div>
