--- a/index.html
+++ b/index.html
@@ -21,11 +21,21 @@
                 <h2 class="heading">Get random background color</h2>
                 <p class="code">
                     Hex Code:
-                    <span>#333333 <i class="fa-regular fa-copy"></i> </span>
+                    <span onclick="copyCode(this.textContent)"
+                        >#333333<i class="fa-regular fa-copy"></i
+                    ></span>
                 </p>
                 <button class="click-me">Click me</button>
             </div>
         </div>
         <script type="module" src="./src/main.js"></script>
+        <script>
+            function copyCode(text) {
+                // console.log("clicked");
+                navigator.clipboard.writeText(text);
+                console.log("copied");
+                //    console.log(this.innerTextContent);
+            }
+        </script>
     </body>
 </html>
